Theory of computational processes and structures/Task5(pythonArray)/grammar.txt
*Program:
	Statement*
Statement:
	ExpressionStatement
	Assignment
	AssignmentMas
	If
	While
ExpressionStatement:
	Expression ';'
Assignment:
	Identifier '=' Expression ';'


If:
	'if' '(' Expression ')' Block
While:
	'while' '(' Expression ')' Block
Block:
	'{' Statement* '}'
Expression:
	Equality
Equality:
	Equality "==" Relational
	Relational
Relational:
	Relational "<" Additive
	Additive
Additive:
	Additive ("+"|"-") Multiplicative
	Multiplicative
Multiplicative:
	Multiplicative ("*"|"/"|"%") Primary
	Primary
Primary:
	Call
	MemberAccess
	Primitive
	ArrayIndex
ArrayIndex:
	Identifier '[' Expession '];'
	Identifier '[' ':' Expession '];'
	Identifier '[' Expession ':' '];'
	Identifier '[' Expession ':' Expession '];'
ArraysExpr:
	'[' Arrays ']'
Arrays:
	Arrays ',' Expression
Call:
	Primary '(' Arguments? ')'
Arguments:
	(Expression ',')* Expression
MemberAccess:
	Primary '.' Identifier
Primitive:
	'(' Expression ')'
	Number
	Identifier
	ArraysExpr
